package exceptions;

public class UserAlreadyExists extends CustomException {
    public UserAlreadyExists() {
        super();
    }
}
