package exceptions;

public class UserNotOnline extends CustomException {
    public UserNotOnline() {
        super();
    }
}
