@startuml

title __SERVER's Class Diagram__\n

  namespace Settings {
    class Settings.Settings {
    }
  }
  

  namespace exceptions {
    class exceptions.ChallengeException {
    }
  }
  

  namespace exceptions {
    abstract class exceptions.CustomException {
    }
  }
  

  namespace exceptions {
    class exceptions.FriendshipException {
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyExists {
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyInGame {
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyLogged {
    }
  }
  

  namespace exceptions {
    class exceptions.UserNotExists {
    }
  }
  

  namespace exceptions {
    class exceptions.UserNotOnline {
    }
  }
  

  namespace exceptions {
    class exceptions.WrongCredException {
    }
  }
  

  namespace server {
    class server.Challenge {
    }
  }
  

  namespace server {
    abstract class server.IChallenge {
    }
  }
  

  namespace server {
    interface server.IServerRMI {
    }
  }
  

  namespace server {
    interface server.IUser {
    }
  }
  

  namespace server {
    interface server.IUsers {
    }
  }
  

  namespace server {
    class server.MyAttachment {
    }
  }
  

  namespace server {
    class server.Notifier {
    }
  }
  

  namespace server {
    class server.ReaderTCP {
    }
  }
  

  namespace server {
    class server.Server {
    }
  }
  

  namespace server {
    class server.ServerRMI {
    }
  }
  

  namespace server {
    class server.ServerTCP {
    }
  }
  

  namespace server {
    abstract class server.TimerChallenge {
    }
  }
  

  namespace server {
    class server.TimerChallengeEnd {
    }
  }
  

  namespace server {
    class server.TimerChallengeRequest {
    }
  }
  

  namespace server {
    class server.UDP {
    }
  }
  

  namespace server {
    class server.User {
    }
  }
  

  namespace server {
    class server.Users {
    }
  }
  

  namespace server {
    class server.WriterTCP {
    }
  }
  

  exceptions.ChallengeException -up-|> exceptions.CustomException
  exceptions.FriendshipException -up-|> exceptions.CustomException
  exceptions.UserAlreadyExists -up-|> exceptions.CustomException
  exceptions.UserAlreadyInGame -up-|> exceptions.CustomException
  exceptions.UserAlreadyLogged -up-|> exceptions.CustomException
  exceptions.UserNotExists -up-|> exceptions.CustomException
  exceptions.UserNotOnline -up-|> exceptions.CustomException
  exceptions.WrongCredException -up-|> exceptions.CustomException
  server.Challenge .up.|> java.lang.Runnable
  server.Challenge -up-|> server.IChallenge
  server.Notifier .up.|> java.lang.Runnable
  server.ReaderTCP .up.|> java.lang.Runnable
  server.ReaderTCP o-- server.UDP : udp
  server.ReaderTCP o-- server.Users : users
  server.Server o-- server.Users : u
  server.Server o-- server.ServerRMI : serverrmi
  server.Server o-- server.ServerTCP : servertcp
  server.ServerRMI .up.|> server.IServerRMI
  server.ServerRMI -up-|> java.rmi.server.RemoteServer
  server.ServerRMI o-- server.Users : users
  server.ServerTCP .up.|> java.lang.Runnable
  server.ServerTCP o-- server.UDP : udp
  server.ServerTCP o-- server.Users : users
  server.TimerChallenge -up-|> java.util.TimerTask
  server.TimerChallengeEnd -up-|> server.TimerChallenge
  server.TimerChallengeEnd o-- server.Challenge : c
  server.TimerChallengeEnd o-- server.Users : users
  server.TimerChallengeRequest -up-|> server.TimerChallenge
  server.TimerChallengeRequest o-- server.Users : users
  server.User .up.|> server.IUser
  server.User o-- server.Challenge : challenge
  server.Users .up.|> server.IUsers
  server.WriterTCP .up.|> java.lang.Runnable
  server.WriterTCP o-- server.Users : users


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
